finish text stagger animation

--- a/text animation/style.scss
+++ b/text animation/style.scss
@@ -24,13 +24,13 @@ body {
   .title {
     text-align    : center;
     text-transform: uppercase;
-    letter-spacing: 0.3em;
+    letter-spacing: 0.2em;
     transform     : translateY(-1em) rotate(-10deg);
     position      : relative;
 
     span {
-      display    : block;
       transform  : skew(-10deg);
+      color: wheat;
       text-shadow: $shadow 1px 1px, paleturquoise 2px 2px, orangered 3px 3px, brown 4px 4px, wheat 5px 5px, green 6px 6px;
       position      : relative;
     }
